--- a/pages/index.css
+++ b/pages/index.css
@@ -21,9 +21,10 @@
 /*<uniquifier>: Use a unique and descriptive class name
 <weight>: Use a value from 100 to 900*/
 
-.noto-sans-uniquifier {
+.noto-serif-uniquifier {
   /*font-optical-sizing: auto;
   - Nao sei pq o validador nao aceita essa propriedade... MDN diz que existe o valor AUTO nessa propriedade*/
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-weight: 400;
   font-style: normal;
   font-variation-settings: "wdth" 100;
