--- a/pages/index.css
+++ b/pages/index.css
@@ -31,23 +31,28 @@
 }
 
 .inter-regular {
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
 }
 
 .inter-medium {
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
 }
 
 .inter-bold {
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 700;
 }
 
 .noto-regular {
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-weight: 400;
   font-style: normal;
 }
 
 .noto-italic {
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-weight: 400;
   font-style: italic;
 }
