--- a/pages/index.css
+++ b/pages/index.css
@@ -2,12 +2,12 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: auto;
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
 
-.inter-regular {
+/*.inter-regular {
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
 }
@@ -32,4 +32,4 @@
   font-family: "Noto Serif", "Times New Roman", serif;
   font-weight: 400;
   font-style: italic;
-}
+}*/
