--- a/pages/index.css
+++ b/pages/index.css
@@ -5,31 +5,100 @@
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  background-color: #ffffff;
+  color: #000000;
 }
 
-/*.inter-regular {
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 400;
+.header {
+  background-image: url("../images/background_header.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 720px;
+  max-height: 800px;
+  height: 100vh;
 }
 
-.inter-medium {
-  font-family: "Inter", "Arial", sans-serif;
+.nav {q
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 80px 0 30px;
+}
+
+.nav__logo {
+  position: relative;
+  width: 105px;
+  height: 39px;
+}
+
+.nav__links {
+  display: flex;
+  column-gap: 20px;
+  list-style-type: none;
+  padding: 0;
+  margin: 8px 0 0;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
-.inter-bold {
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 700;
+.header__content {
+  padding-left: 80px;
+  height: 100vh;
 }
 
-.noto-regular {
+.header__title {
+  padding: 183px 0 28px;
+  margin: 0;
+  max-width: 709px;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
+}
+
+.header__span-accent {
+  display: block;
   font-family: "Noto Serif", "Times New Roman", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.noto-italic {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-weight: 400;
   font-style: italic;
-}*/
+  font-size: 58px;
+  line-height: 72px;
+  color: #2f80ed;
+}
+
+.header__description {
+  max-width: 683px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__image {
+  max-width: 646px;
+  max-height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+}
+
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  margin: auto 80px 40px;
+}
+
+.header__hours {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header__address {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
+}
