--- a/pages/index.css
+++ b/pages/index.css
@@ -10,10 +10,16 @@
 }
 
 .header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-image: url("../images/background_header.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
 }
 
 .nav {
@@ -54,12 +60,10 @@
 
 .header__content {
   padding-left: 80px;
-  height: 100vh;
 }
 
 .header__title {
-  padding: 183px 0 28px;
-  margin: 0;
+  margin: 183px 0 0;
   max-width: 709px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
@@ -78,6 +82,7 @@
 }
 
 .header__description {
+  margin: 28px 0 0;
   max-width: 683px;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
@@ -95,7 +100,9 @@
 .header__footer {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   padding: 0 80px 40px;
+  z-index: 1;
 }
 
 .header__hours {
@@ -105,11 +112,17 @@
 }
 
 .header__address {
+  display: flex;
+  align-items: flex-end;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #838383;
+}
+
+.header__address p {
+  margin: 0;
 }
 
 .recipes {
@@ -155,8 +168,8 @@
 }
 
 .recipes__iframe {
-  width: 560;
-  height: 315;
+  width: 480px;
+  height: 273px;
 }
 
 .recipes__video-caption {
