--- a/pages/index.css
+++ b/pages/index.css
@@ -175,3 +175,94 @@
 .recipes__span-caption {
   vertical-align: middle;
 }
+
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url("../images/background_reservation.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reservation__title {
+  margin: 100px 0 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form {
+  margin: 80px auto 120px;
+  max-width: 385px;
+}
+
+.form__fieldset {
+  margin: 0;
+  border: 0;
+  padding: 0;
+}
+
+.form__label {
+  display: block;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__item {
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin: 8px 0 32px;
+  border: 0;
+  width: 100%;
+  height: 60px;
+  background-color: white;
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.form__item::placeholder {
+  padding: 15px 20px;
+  color: #838383;
+}
+
+.form__button {
+  border-radius: 4px;
+  background-color: #2f80ed;
+  color: #ffffff;
+  border: 0;
+  max-width: 385px;
+  width: 100%;
+  height: 60px;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__button:hover {
+  opacity: 70%;
+}
+
+.form__label_checkbox {
+  display: flex;
+  align-items: center;
+}
+
+.form__checkbox {
+  width: 20px;
+  height: 20px;
+  border-radius: 2px;
+  margin-right: 12px;
+}
+
+.form__checkbox:checked {
+  background-color: #2f80ed;
+  background-image: url(../images/check.svg);
+}
