--- a/pages/index.css
+++ b/pages/index.css
@@ -188,7 +188,7 @@
 }
 
 .reservation__title {
-  margin: 100px 0 0;
+  margin: 100px auto auto;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
