--- a/pages/index.css
+++ b/pages/index.css
@@ -188,7 +188,7 @@
 }
 
 .reservation__title {
-  margin: 100px auto auto;
+  margin: 100px auto 80px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
@@ -196,7 +196,7 @@
 }
 
 .reservation__form {
-  margin: 80px auto 120px;
+  margin: auto auto 120px;
   max-width: 385px;
 }
 
