--- a/pages/index.css
+++ b/pages/index.css
@@ -185,10 +185,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 100px;
 }
 
 .reservation__title {
-  margin: 100px auto 80px;
+  margin: 0 0 80px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
