--- a/pages/index.css
+++ b/pages/index.css
@@ -189,7 +189,7 @@
 }
 
 .reservation__title {
-  margin: 0 0 80px;
+  margin: auto auto 80px;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
