--- a/pages/index.css
+++ b/pages/index.css
@@ -1,266 +1,7 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #ffffff;
-  color: #000000;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-image: url("../images/background_header.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px 80px 0 30px;
-}
-
-.nav__logo {
-  position: relative;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links {
-  display: flex;
-  column-gap: 20px;
-  list-style-type: none;
-  padding: 0;
-  margin: 8px 0 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.nav__link:hover {
-  color: #2f80ed;
-  text-decoration: underline;
-  font-weight: bold;
-}
-
-.header__title {
-  margin: 183px 0 0 80px;
-  max-width: 709px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__description {
-  margin: 28px 0 0 80px;
-  max-width: 683px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  max-width: 646px;
-  max-height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-}
-
-.header__footer {
-  display: flex;
-  justify-items: flex-end;
-  flex-direction: column;
-  margin-top: auto;
-  padding: 0 80px 40px;
-  z-index: 1;
-}
-
-.header__paragraph {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin: 0;
-}
-
-.header__paragraph:last-child {
-  margin-left: auto; /* Empurra o último parágrafo para a direita */
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url("../images/background_recipes.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-}
-
-.recipes__title {
-  max-width: 580px;
-  padding: 100px 0 0 80px;
-  margin: 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  padding: 24px 0 0 80px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  align-self: center;
-  margin: 80px 0 215px 0;
-  list-style-type: none;
-  column-gap: 40px;
-}
-
-.recipes__video-item {
-  display: flex;
-  flex-direction: column;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__span-caption {
-  vertical-align: middle;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url("../images/background_reservation.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 100px;
-}
-
-.reservation__title {
-  margin: 0 auto 80px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: auto auto 120px;
-}
-.form {
-  max-width: 385px;
-  padding: 0;
-}
-
-.reservation__fieldset {
-  border: 0;
-}
-
-.reservation__label {
-  display: block;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.reservation__input {
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin: 8px 0 32px;
-  border: 0;
-  width: 100%;
-  height: 60px;
-  background-color: white;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 20px;
-  line-height: 30px;
-  padding: 15px 20px;
-}
-
-.reservation__input::placeholder {
-  color: #838383;
-}
-
-.reservation__button {
-  margin-bottom: 32px;
-  border-radius: 4px;
-  background-color: #2f80ed;
-  color: #ffffff;
-  border: 0;
-  max-width: 385px;
-  width: 100%;
-  height: 60px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.reservation__button:hover {
-  opacity: 70%;
-}
-
-.reservation__label_checkbox {
-  display: flex;
-  align-items: center;
-}
-
-.reservation__checkbox {
-  width: 20px;
-  height: 20px;
-  border-radius: 2px;
-  margin-right: 12px;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/footer.css);
