--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: #fff;
   background-image: url("../images/background_header.svg");
   background-position: center;
   background-repeat: no-repeat;
